Update cc management resilience

--- a/prep/resilience/ecological/cc/v2020/cc_management.Rmd
+++ b/prep/resilience/ecological/cc/v2020/cc_management.Rmd
@@ -45,24 +45,24 @@ dir_res   <- '~/github/pal-prep/prep/resilience/ecological/cc/v2020'
 
 ## Management 
 
-A resilience layer is created for management of offshore and inland areas based on three criteria:  
+A resilience layer is created for climate change management based on three criteria:  
 
  - Is there a management plan in place?  
  - Is there monitoring and assessment?   
  - Is the management plan effective?  
  
-A yes will be assigned a value of 1, in-development will be assigned a value of 0.5, a no will be assigned a value of 0. The final score will be the sum over 3. The status is assigned based on information contained in the Climate Adaptation and Resilience Laboratory report and additional information from Alex Wegmann at The Nature Conservancy.     
+A yes will be assigned a value of 1, in-development will be assigned a value of 0.5, a no will be assigned a value of 0. The final score will be the sum over 3. The status is assigned based on information contained in the Climate Adaptation and Resilience Laboratory report.        
 
-The 2019 report outlines threats to terrestrial and marine systems from climate change. The report includes a four year science strategy to strengthen the resilience of Palmyra's ecosystems to global and anthropogenic stressors including methods for monitoring long-term change. Further, the report includes milestones which will serve as points to evaluate effectiveness. However, since the program is in its first year of implementation we will assign the effective category a score of 0.5. 
+The 2019 report outlines threats to terrestrial and marine systems from climate change. The report includes a four year science strategy to strengthen the resilience of Palmyra's ecosystems to global and anthropogenic stressors including methods for monitoring long-term change.   
 <br>     
 
 | Category         | Response         | Score | 
 |------------------|------------------|-------|
 | Management Plan? | Yes              | 1     |
 | Monitoring?      | Yes              | 1     |
-| Effective?       | Yes              | 0.5   |   
+| Effective?       | No               | 0     |   
 
-The plan was established in 2019 so for years before 2019, an in-development score of 0.5 will be assigned to the management plan category. Since monitoring of the marine environment for climate variables like ocean acidification and sea surface temperature, has been ongoing since 2000, the monitoring category score will remain 1.         
+The plan was established in 2019 so for years before 2019, an in-development score of 0.5 will be assigned to the management plan category. Since monitoring of the marine environment for climate variables like ocean acidification and sea surface temperature, has been ongoing since 2000, the monitoring category score will remain 1. A score of zero is assigned for effectiveness because the establishment of a climate adaptation plan and monitoring of climate impacts are not necessarily expected to be effective in actually mitigating climate pressures (sea surface temperature, ocean acidification, uv radiation, and sea level rise).          
 
 ```{r management, eval=F}
 
@@ -70,14 +70,14 @@ The plan was established in 2019 so for years before 2019, an in-development sco
 mgmt_14 <- data.frame(
   region_id = rep(1, 5),
   year = c(2014:2018),
-  resilience_score = rep(2/3, 5)
+  resilience_score = rep(1.5/3, 5)
 )
 
 # 2019 and 2020 scores 
 mgmt_19 <- data.frame(
   region_id = rep(1,2), 
   year = c(2019, 2020),
-  resilience_score = rep(2.5/3,2)
+  resilience_score = rep(2/3,2)
 )
 
 # Combine for overall mgmt layer 
