--- a/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
+++ b/prep/hs/cs/v2020/carbon_storage_data_prep.Rmd
@@ -19,26 +19,17 @@ output:
 
 # Summary
 
-This script classifies tree species into native and nonnative groups and finds the percent of total area occupied by native tree species in 2016. The carbon storage status is based on the percent of land occupied by native tree species.      
+This script creates a placeholder layer for the Carbon Storage goal. Little is known about the carbon sequestration rates of atoll rainforests and currently there is not information to calculate a meaningful status score.         
 
 # Data 
 
-*Rainforest Tree Maps*   
-
-Tree cover maps were downloaded from the U.S. Geological Survey vegetation community mapping project for Palmyra Atoll, found [here](https://www.sciencebase.gov/catalog/item/5c66fc5be4b0fe48cb3aca49).    
-
-Vegetation maps were completed in October 2016 and published in June 2019. Data were downloaded on July 7, 2020.    
-
-Citation: Struckhoff, M.A., 2019, Woody species crown and vegetation community data, Palmyra Atoll, 2016: U.S. Geological Survey data release, https://doi.org/10.5066/P9GMPVIO.  
+Data from this layer is meant to come from tree cover maps from U.S. Geological Survey vegetation community mapping project for Palmyra Atoll, available [here](https://www.sciencebase.gov/catalog/item/5c66fc5be4b0fe48cb3aca49). However, there is not enough accompanying information on carbon sequestration rates to calculate a complete status score.  
 
 # Setup
 
 ```{r setup, message=F, warning=F, results='hide'}
 
 library(tidyverse)
-library(sf)
-library(rgdal)
-library(lwgeom)
 library(here)
 
 # Source and set file paths
@@ -50,174 +41,27 @@ dir_goal   <- '~/github/pal-prep/prep/hs/cs/v2020'
 
 # Methods
 
-## Get Tree Cover Maps
+Since there is not enough information on the carbon sequestration rates of atoll rainforests, we will use a placeholder layer with a status score of 'NA'. There is an ongoing carbon accounting project on Palmyra Atoll which could be used to inform this goal in the future.   
 
-```{r get-tree-cover-maps, eval=F}
+## Create Placeholder Layer
 
-trees <- st_read(file.path(dir_anx, '_raw_data/USGS_data/Woody_Crowns_Palmyra_Atoll_2016'),
-                   layer = "Woody_Crowns_Palmyra_Atoll_2016")
+```{r create-placeholder-layer, eval=F}
 
-# Warning that some polygons don't have four points
-# Check geometry validity
-validity <- st_is_valid(trees)
-trees$valid <- validity
+cs_status <- data.frame(
+  region_id = 1, 
+  year = 2020, 
+  status = NA
+)
 
-# Find invalid polygons
-invalid <- trees %>% 
-  dplyr::filter(valid != TRUE) # 16 invalid polygons
-
-# Check reason for invalid geometries
-st_is_valid(invalid, reason = TRUE) # All have self-intersection
-
-# Fix self intersections using st_make_valid
-make_valid <- sf::st_make_valid(invalid) %>% 
-  st_cast("MULTIPOLYGON") # Retain geometry type multipolygon
-
-# Check if it worked
-st_is_valid(make_valid) # Get all true now 
-
-# Bind back together
-trees_edit <- trees %>% 
-  dplyr::filter(trees$valid == TRUE) %>% 
-  rbind(make_valid) %>% # Still missing three observations
-  dplyr::select(-valid)
-
-# Save to the raw folder 
-st_write(trees_edit, file.path(dir_goal, 'raw/tree_map.shp'),
-         driver = "ESRI Shapefile")
-
-# Check for NA valid geometries instead of False
-# Not sure what to do about these 
-geom_na <- trees %>% 
-  dplyr::filter(is.na(valid)) # Found missing ones - corrupt not invalid
-
+# Save to output folder
+write_csv(cs_status, file.path(dir_goal, "output/cs_status_placeholder.csv"))
 ```
-
-## Categorize Native/Nonnative Species
-
-The carbon storage goal is based on percent coverage of native tree species, we need to identify which of the mapped species are native vs. nonnative.   
-
-The following tree species are included in the mapping project and we have designated if they are native or nonnative. Category designations were assigned based species lists found in Tables 1 and 2 of the U.S. Geological Survey 2011 Terrestrial Forest Management Plan for Palmyra Atoll, found [here](https://permanent.fdlp.gov/gpo119875/ofr20111007.pdf).         
-
- - *Araucaria*, species unknown: Nonnative      
- - *Artocarpus altilis*: Nonnative   
- - *Barringtonia asiatica*: Native   
- - *Calophyllum inophyllum*: Nonnative   
- - *Casuarina equisetifolia*: Nonnative     
- - *Coccoloba uvifera*: Nonnative   
- - *Cocos nucifera*: Nonnative   
- - *Cordia subcordata*: Native   
- - *Guettarda speciosa*: Native   
- - *Heliotropium foertherianum* also known as *Tournefortia argentea*: Native   
- - *Hernandia nymphaeifolia*: Native (not on the lists but *Hernandia sonora* is native)    
- - *Hibiscus tiliaceus*: Nonnative   
- - *Ipomoea*: Native but excluded because it's a ground vine not a tree     
- - *Nephrolepis*: Nonnative, but excluded because it's a fern not a tree      
- - *Pandanus tectorius* updated from *Pandanus fischerianus*: Native  
- - *Phymatosorus scolopendria*: Native 
- - *Pisonia grandis*: Native   
- - *Premna serratifolia*: Native   
- - *Scaevola taccada*: Native   
- - *Terminalia catappa*: Nonnative   
- - Unknown: excluded from analysis    
- - Water, standing water: excluded from analysis    
- 
- 
-```{r add-native-status, eval=F}
-# Read in the shp with fixed geometries 
-tree_map <- st_read(file.path(dir_goal, "raw"), layer = "tree_map")
-
-# List of native plants:
-natives <- c("Barringtonia asiatica", "Cordia subcordata",
-             "Guettarda speciosa","Heliotropium foertherianum",
-             "Hernandia nymphaeifolia", "Ipomoea",
-             "Pandanus tectorius", "Pisonia grandis",
-             "Phymatosorus scolopendria", "Premna serratifolia",
-             "Scaevola taccada")
-
-# Add status:
-tree_cat <- tree_map %>% 
-  mutate(category = ifelse(species %in% natives,
-                           "native", "nonnative")) %>% 
-  filter(species != "Ipomoea" & species != "Nephrolepis")
-
-# Save to int folder
-write_sf(tree_cat, file.path(dir_goal, 'int/tree_category.shp'),
-         driver = "ESRI Shapefile")
-```
- 
-## Calculate Area 
-
-Find the area of native vs. nonnative trees on the islands   
-
-```{r calculate-area, eval=F}
-
-tree_cat <- st_read(file.path(dir_goal, "int"),
-                    layer = "tree_category") 
-
-# Change area in square meters to area in square km 
-# Find area of native and nonnative species
-tree_area <- tree_cat %>% 
-  mutate(area_km = Area * 0.000001) %>% 
-  group_by(category) %>% 
-  summarize(geometry = st_union(geometry),
-            area_km = sum(area_km))
-
-# Check aggregation 
-plot(tree_area)
-
-# Save to int folder
-write_sf(tree_area, file.path(dir_goal, "int/tree_area.shp"),
-         driver = "ESRI Shapefile", overwrite = TRUE)
-
-```
-
-## Calculate Status
- 
-**Reference Point:** 95% of the forest area dominated by native trees   
-
-The status is calculated as the current percent of forest dominated by native trees over the reference point percentage as in the following equation:   
-
-$status~=~percent~cover~/~reference~point~percent~cover$   
- 
-```{r calc-status, eval=F}
-
-tree_area <- st_read(file.path(dir_goal, "int"), layer = "tree_area") 
-
-# Define reference point
-ref_point <- 0.95 
-
-# Find total area
-total_area_km <- sum(tree_area$area_km)
-
-# Find percent area for both native and nonnative species
-percent_area <- tree_area %>% 
-  mutate(total_area = total_area_km) %>% 
-  mutate(percent_area = area_km / total_area)
-
-# Calculate status 
-cs_status <- percent_area %>% 
-  filter(category == "native") %>% 
-  mutate(status = percent_area / ref_point,
-         region_id = 1,
-         year = 2016,
-         habitat = 'rainforest') %>% 
-  dplyr::select(region_id, habitat, year, status)
-
-# Don't need to save the geometries in the output
-cs_status <- as.data.frame(cs_status) %>% 
-  dplyr::select(-geometry)
-
-# Save as csv to output
-write_csv(cs_status, file.path(dir_goal, "output/cs_status.csv"))
-```
-
 
 ## Save to Toolbox 
 
 ```{r save-to-toolbox, eval=F}
-cs_status <- read_csv(file.path(dir_goal, "output/cs_status.csv"))
-write_csv(cs_status, file.path(dir_scores, 'layers/hs_carbon_storage_status.csv'))
+cs_status <- read_csv(file.path(dir_goal, "output/cs_status_placeholder.csv"))
+write_csv(cs_status, file.path(dir_scores, 'layers/hs_carbon_storage_status_placeholder.csv'))
 ```
  
  
